2006-05-22  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (mail_separate_diffs): Don't use RCS Id key in example.

	* log_accum.pl (main): Drop unnecessary parentheses.

	* log_accum.pl (set_defaults): Clone --mail-to for empty
	--separate-diffs.
	(%option_spec): Make --separate-diffs accept an optional list of
	strings.
	(main): Pass separate-diffs emails to mail_separate_diffs.

	* log_accum.pl (mail_separate_diffs): Include the last diff.
	(Original patch from Sylvain Beucler <beuc@beuc.net>.)

2006-05-17  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (write_file, append_file): Don't write empty lists.
	(read_logfile): Return undef rather than empty list.  Add debug print.
	(build_diff): Add debug prints and assertion.

2006-05-15  Derek Price  <derek@ximbiot.com>

	* log_accum.pl (set_defaults): Set diff defaults.
	(mail_separate_diffs, build_diffs): New functions.
	(get_temp_files): Add olf/new revision number storage.
	(get_topdir): New function factored from...
	(compile_subject): ...here.
	(urlencode): Don't write input values directly.
	(build_message_body): Build and return diff text as needed.

2006-05-14  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Simplify and fix ViewCVS URLs.
	(Patch from Sylvain Beucler <beuc@beuc.net>.)

	* log_accum.pl (parse_config): Add header comment block.
	(process_argv): Remove TODO asterisks in header comment block.
	(build_message_body): Don't require $config.
	(main): Don't pass $config to build_message_body.

2006-05-13  Derek Price  <derek@ximbiot.com>

	* commit_prep.pl: Sync comments with recent changes.
	* log_accum.pl: Ditto.
	(read_logfile): Ignore missing log files.
	(build_message_body): Indent log text.
	(main): Don't build cvsweb URLs unless requested.
	(Patch from Sylvain Beucler <beuc@beuc.net>.)

	* log_accum.pl: Use only the last dir from CVSROOT in cvsweb URLs by
	default.

2006-05-12  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Restore URL creation.
